@@ -1,3 +1,8 @@
+2010-01-24 03:09-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* WinNSMenu.m: Added function to delete the menu for the update
+	delete_menu(...).
+
 2010-01-23 18:37-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* WinNSMenu.m: Code to roughly calculate the number of rows
